[gd_scene load_steps=4 format=3 uid="uid://bcs87y7ptx3ke"]

[ext_resource type="Script" uid="uid://bdlfvuljckmu1" path="res://scenes/main/control.gd" id="1_2f0aq"]
[ext_resource type="Script" uid="uid://l2yejnjysupr" path="res://scenes/main/graph_edit.gd" id="2_3ioqo"]
[ext_resource type="PackedScene" uid="uid://b0wdj8v6o0wq0" path="res://scenes/menu/menu.tscn" id="3_dtf4o"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2f0aq")

[node name="GraphEdit" type="GraphEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
right_disconnects = true
script = ExtResource("2_3ioqo")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[node name="mainmenu" parent="." instance=ExtResource("3_dtf4o")]
layout_mode = 1

[node name="NoLocationPopup" type="Window" parent="."]
auto_translate_mode = 1
title = "Wrong File Type"
initial_position = 2
size = Vector2i(350, 200)
visible = false
exclusive = true
unresizable = true
borderless = true
always_on_top = true
popup_window = true

[node name="Label" type="Label" parent="NoLocationPopup"]
offset_left = 1.0
offset_top = 7.0
offset_right = 350.0
offset_bottom = 160.0
text = "Please select the location of your _cdprogs folder. This can be changed later in settings.

Windows Default: C:\\CDPR8\\_cdp\\_cdprogs
Mac Default: ~/cdp/_cdprogs
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="OkButton" type="Button" parent="NoLocationPopup"]
offset_left = 142.0
offset_top = 154.0
offset_right = 206.0
offset_bottom = 185.0
text = "Ok"

[node name="NoInputPopup" type="Window" parent="."]
auto_translate_mode = 1
title = "No Input Selected"
initial_position = 2
size = Vector2i(350, 150)
visible = false
exclusive = true
unresizable = true
borderless = true
always_on_top = true
popup_window = true

[node name="Label" type="Label" parent="NoInputPopup"]
offset_top = 5.0
offset_right = 349.0
offset_bottom = 98.0
text = "No input file selected
Please load a sound file into Input File node
Supported file type: .wav, mono or stereo"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="OkButton2" type="Button" parent="NoInputPopup"]
offset_left = 142.0
offset_top = 103.0
offset_right = 206.0
offset_bottom = 134.0
text = "Ok"

[node name="MultipleConnectionsPopup" type="Window" parent="."]
auto_translate_mode = 1
title = "No Input Selected"
initial_position = 2
size = Vector2i(350, 170)
visible = false
exclusive = true
unresizable = true
borderless = true
always_on_top = true
popup_window = true

[node name="Label" type="Label" parent="MultipleConnectionsPopup"]
offset_left = -1.0
offset_top = 13.0
offset_right = 348.0
offset_bottom = 114.0
text = "PVOC Nodes can only have one input.
To mix sounds created in the frequency domain convert them to the time domain using PVOC: Resynthesise first."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="OkButton3" type="Button" parent="MultipleConnectionsPopup"]
offset_left = 140.0
offset_top = 130.0
offset_right = 204.0
offset_bottom = 161.0
text = "Ok"

[node name="CdpLocationDialog" type="FileDialog" parent="."]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[node name="Console" type="Window" parent="."]
title = "Generating Output"
initial_position = 5
size = Vector2i(600, 400)
visible = false
unresizable = true
always_on_top = true

[node name="Panel" type="Panel" parent="Console"]
offset_left = 10.0
offset_top = 12.0
offset_right = 590.0
offset_bottom = 340.0

[node name="ConsoleOutput" type="RichTextLabel" parent="Console"]
offset_left = 10.0
offset_top = 12.0
offset_right = 590.0
offset_bottom = 340.0
bbcode_enabled = true

[node name="ConsoleOpenFolder" type="Button" parent="Console"]
offset_left = 172.0
offset_top = 350.0
offset_right = 428.0
offset_bottom = 389.0
text = "Open Output Folder"

[connection signal="connection_request" from="GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="delete_nodes_request" from="GraphEdit" to="." method="_on_graph_edit_delete_nodes_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
[connection signal="node_deselected" from="GraphEdit" to="." method="_on_graph_edit_node_deselected"]
[connection signal="node_selected" from="GraphEdit" to="." method="_on_graph_edit_node_selected"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="button_down" from="NoLocationPopup/OkButton" to="." method="_on_ok_button_button_down"]
[connection signal="button_down" from="NoInputPopup/OkButton2" to="." method="_on_ok_button_2_button_down"]
[connection signal="button_down" from="MultipleConnectionsPopup/OkButton3" to="." method="_on_ok_button_3_button_down"]
[connection signal="canceled" from="CdpLocationDialog" to="." method="_on_cdp_location_dialog_canceled"]
[connection signal="dir_selected" from="CdpLocationDialog" to="." method="_on_cdp_location_dialog_dir_selected"]
[connection signal="close_requested" from="Console" to="." method="_on_console_close_requested"]
[connection signal="button_down" from="Console/ConsoleOpenFolder" to="." method="_on_console_open_folder_button_down"]
